<resources>

    <string name="app_name">CityU Helper</string>
    <string name="action_addItem">Add Item</string>
    <string name="action_filter">Filter</string>
    <string name="action_sendmail">Send Email</string>
    <string name="action_call">Call</string>

    <string name="title_activity_map">Map</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_newItem">New Item</string>

    <string name="userName">Name</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="phoneNumber">Phone number</string>
    <string name="email">Email</string>
    <string name="position">Position</string>
    <string name="send">Send</string>
    <string name="colorful">Colorful</string>
    <string name="blackandwhite">Black and white</string>
    <string name="color">Color</string>
    <string name="file">File</string>
    <string name="type">Type</string>

    <string name="delivery">Delivery</string>
    <string name="print">Print</string>
    <string name="food">Food</string>
    <string name="question">Question</string>
    <string name="need">Need</string>

    <string name="saving">Saving the item...</string>
    <string name="showAll">Show all</string>
    <string name="removing">Removing</string>
    <string name="areyousure">Are you sure you want to delete this item?</string>

    <string name="from">from</string>
    <string name="to">to</string>

</resources>
