<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cz.uhk.cityuhelper.DetailActivity"
    android:paddingLeft="7dp">

<!--
        <TextView
            android:id="@+id/txtDetailType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="7dp"
            />

-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/txtDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/txtDetailSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginBottom="1dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/txtDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:layout_marginBottom="1dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/txtDetailPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginBottom="5dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginBottom="1dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/txtDetailEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginBottom="5dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:id="@+id/txtDetailPosition"
        android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mapView">

    </com.google.android.gms.maps.MapView>


</LinearLayout>
